<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:backgroundTint="@android:color/white"
        android:contentDescription="@string/default_content_description"
        android:src="@drawable/ic_arrow_back" />

    <LinearLayout
        android:id="@+id/userProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backButton"
        tools:ignore="UseCompoundDrawables">

    <!-- User Profile Picture -->
    <ImageView
        android:id="@+id/imageUserProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/default_profile_picture"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/default_content_description" />

    <!-- User Name -->
    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_post_username"
        android:textStyle="bold"
        />
    </LinearLayout>
    <!-- Post Image -->
    <ImageView
        android:id="@+id/imagePost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfile"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/default_post_image_background"
        android:contentDescription="@string/default_content_description" />

    <LinearLayout
        android:id="@+id/postStats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/imagePost"
        >

    <!-- Like Button -->
    <ImageView
        android:id="@+id/imageLikeButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_heart_outline"
        android:layout_margin="8dp"
        android:contentDescription="@string/default_content_description" />

    <!-- Comment Button -->
    <ImageView
        android:id="@+id/imageCommentButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_comment"
        android:layout_margin="8dp"
        android:contentDescription="@string/default_content_description" />

    <!-- Number of Likes -->
    <TextView
        android:id="@+id/textLikesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_like_count"
        android:layout_margin="8dp"
        />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/postCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/postStats"
        >
        <!-- Caption -->
        <TextView
            android:id="@+id/textCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_post_caption"
            android:layout_marginTop="8dp" />
    </LinearLayout>
</RelativeLayout>
